added DSStrore, xcuserdata to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-Todolist.xcodeproj/xcuserdata/nodir.xcuserdatad/xcdebugger/
+.DS_Store
+Todolist.xcodeproj/project.xcworkspace/xcuserdata/*
+Todolist.xcodeproj/xcuserdata/*
